GPencil, edit mode: merge points do nothing #78337

Closed
opened 2020-06-27 02:23:13 +02:00 by Vyacheslav Kobozev · 18 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.83.1, branch: master, commit date: 2020-06-25 09:47, hash: 8289fc688b
Worked: (newest version of Blender that worked as expected)

Short description of error
untitled.blend
2020-06-27_03-21-42.mp4

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.83.1, branch: master, commit date: 2020-06-25 09:47, hash: `8289fc688b` Worked: (newest version of Blender that worked as expected) **Short description of error** [untitled.blend](https://archive.blender.org/developer/F8646108/untitled.blend) [2020-06-27_03-21-42.mp4](https://archive.blender.org/developer/F8646110/2020-06-27_03-21-42.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Antonio Vazquez self-assigned this 2020-06-27 11:01:04 +02:00

This is not a bug. Merge points only works in the same stroke. If you want join two stroke use the Join operator.

Thanks for the report, but as this is not a bug I'm going to close the report. Maybe in the future we implement what you ask.

This is not a bug. `Merge` points only works in the same stroke. If you want join two stroke use the `Join` operator. Thanks for the report, but as this is not a bug I'm going to close the report. Maybe in the future we implement what you ask.

@antoniov

Merge points only works in the same stroke.

Please reopen. Merge do not work at all, even on one stroke.

@antoniov >Merge points only works in the same stroke. Please reopen. Merge do not work at all, even on one stroke.

Changed status from 'Archived' to: 'Needs Developer To Reproduce'

Changed status from 'Archived' to: 'Needs Developer To Reproduce'

Yesturday version crashing, when I am trying to merge, and today version do nothing.
2020-06-27_13-55-15.mp4

Yesturday version crashing, when I am trying to merge, and today version do nothing. [2020-06-27_13-55-15.mp4](https://archive.blender.org/developer/F8647523/2020-06-27_13-55-15.mp4)

The problem is the merge operator does not mean the same as in Meshes. The merge take several points and merge all together to create a new stroke. The merge you want is more the Dissolve of GPencil.

2020-06-27 13-07-34.mp4

The problem is the merge operator does not mean the same as in Meshes. The merge take several points and merge all together to create a new stroke. The merge you want is more the Dissolve of GPencil. [2020-06-27 13-07-34.mp4](https://archive.blender.org/developer/F8647537/2020-06-27_13-07-34.mp4)
  1. For me it is still do nothing and crashes Blender
  2. If it is not merge, it should be named properly. Like «build new stroke» or «connect». Just for consistency. With mesh «Join» or «connect» do the same. It become even more confusing, as we have «merge by distance», that works exactly as with mesh.
    2020-06-27_14-20-27.mp4
1) For me it is still do nothing and crashes Blender 2) If it is not merge, it should be named properly. Like «build new stroke» or «connect». Just for consistency. With mesh «Join» or «connect» do the same. It become even more confusing, as we have «merge by distance», that works exactly as with mesh. [2020-06-27_14-20-27.mp4](https://archive.blender.org/developer/F8647544/2020-06-27_14-20-27.mp4)

Changed status from 'Needs Developer To Reproduce' to: 'Archived'

Changed status from 'Needs Developer To Reproduce' to: 'Archived'

As the merge by distance is also available, following the policy of this web I have to close the report because it cannot be consider as a bug.

For more information on why this isn't considered a bug, visit: https://wiki.blender.org/wiki/Reference/Not_a_bug

As the `merge by distance` is also available, following the policy of this web I have to close the report because it cannot be consider as a bug. For more information on why this isn't considered a bug, visit: https://wiki.blender.org/wiki/Reference/Not_a_bug

@antoniov But it still do nothing and crashes Blender. Watch last video,

@antoniov But it still do nothing and crashes Blender. Watch last video,

Blender crashes sometimes immediately, and sometimes after exit and enter edit mode again.
File that saved in edit mode, crashes Blender on open.
2020-06-27_14-33-25.mp4

Blender crashes sometimes immediately, and sometimes after exit and enter edit mode again. File that saved in edit mode, crashes Blender on open. [2020-06-27_14-33-25.mp4](https://archive.blender.org/developer/F8647626/2020-06-27_14-33-25.mp4)

This issue was referenced by 78c7e7e3bc

This issue was referenced by 78c7e7e3bc26896aae0334362ab91a9025e22a7d

This issue was referenced by d7b10e5b74

This issue was referenced by d7b10e5b740fe23f6c713fb9604dcc8b49a83050

Crash Fixed!

Crash Fixed!

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

@antoniov Thanks!

@antoniov Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78337
No description provided.