Fix T78337: Fix crash when use GPencil merge without materials

If the object hadn't material, the index of material was negative.